// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe mostrar el componente con la imagen 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product image"
    className="productImg undefined"
    src="./coffe-mug.png"
  />
</div>
`;

exports[`ProductImage Debe mostrar el componente correctamente 1`] = `
<img
  alt="Product image"
  className="productImg undefined"
  src="./coffe-mug.png"
/>
`;
